@@ -1,0 +1,23 @@
+Foxit Reader End User License Agreement
+
+This agreement is made between Foxit Corporation Company of Fremont, California, USA ("Foxit") and you, the person who makes use of Foxit Reader ("User").
+
+User must agree all terms in this agreement in order to use Foxit Reader legally. If User doesn't agree to all terms in this agreement, please don't use Foxit Reader, and delete all related files from User’s computer.
+
+1. OWNERSHIP: Foxit Reader is fully owned by Foxit, this license agreement doesn't change the ownership.
+
+2. LICENSE: Foxit grants User the license to use Foxit Reader, free of charge, if User accepts all the conditions listed in this agreement. "Use" means loading the product to CPU, memory, and/or other storages of User’s computer.
+
+3. CONDITIONS: To be licensed to use Foxit Reader, User must:
+   a) Not modify any part of Foxit Reader;
+   b) Agree to release Foxit from all liabilities caused directly or indirectly by using Foxit Reader;
+   
+
+4. EVALUATION USE: Some functions of Foxit Reader require an additional license to fully operate. If User uses them without an additional license, Foxit Reader may put evaluation marks onto User’s document when User uses those functions and saves the document. Foxit Reader will notify User when User uses those functions for the first time. In order to use Foxit Reader, User must accept the consequences of any modification made by Foxit Reader when User saves a document.
+
+5. REDISTRIBUTION: User can redistribute Foxit Reader under this agreement under the condition that User agrees not to redistribute Foxit Reader on mobile devices or embedded devices including cellular phones, PDA’s, and all other handheld devices.
+
+6. LIABILIY: Foxit's liability is limited to replacement or refund only if the software downloaded from the Foxit website is virus-infected.
+
+Foxit Corporation
+
