@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=FoxitReader
+Type=Application
+Comment=Foxit PDF Reader
+Exec=foxitreader
+TryExec=foxitreader
+Icon=foxitreader
+Categories=GTK;Office;Viewer;
+MimeType=application/pdf;
